# UoU

./: README.md
calendars-develop/: .editorconfig  .gitignore  Dockerfile  (+8 more)
uone-caching/src/: setup.cfg  setup.py
uone-caching/src/hdn_caching/: __init__.py  utils.py
uone-caching/src/hdn_caching/actions/: __init__.py  base_engine.py  insert.py  query.py  remove.py
uone-caching/src/hdn_caching/item_types/: cache_item.py  object_item.py  schedule_item.py
uone-caching/src/tests/: contracts.py  test_base_engine.py  test_cache_item.py  test_insert_engine.py  test_object_item.py  test_query_engine.py
uone-data-scraping/src/: VERSION  setup.cfg  setup.py
uone-data-scraping/src/tests/: test_dotmap.py  test_function_expressions.py  test_hdn_params_generator.py  test_helpers.py  test_modifiers.py  test_modifiers_v2.py  test_nic_scraping.py  test_processor.py  test_stack_builder.py  test_templates.py  test_value_expressions.py
uone-data-scraping/src/uone_data_scraping/: __init__.py
uone-data-scraping/src/uone_data_scraping/configs/: templates.py
uone-data-scraping/src/uone_data_scraping/expressions/: bases.py  expressions.py  function_expression.py  value_expression.py
uone-data-scraping/src/uone_data_scraping/params_generator/: __init__.py
uone-data-scraping/src/uone_data_scraping/params_generator/dialpad/: api.py
uone-data-scraping/src/uone_data_scraping/processing/: dotmap.py  modifiers.py  processor.py  stack_builder.py
uone-data-scraping/src/uone_data_scraping/scrapers/: __init__.py
uone-data-scraping/src/uone_data_scraping/utils/: helpers.py
(+1326 files in other folders)
