[metadata]
name = uone_caching
version = 1.14.0-dev0
author = ETL
author_email = it@heydaynow.com

# One-line project description
description = Caching for ETL.

# ref README, it contains more detail
long_description = file: README.md

[options]
zip_safe = True
include_package_data = True
packages = find:

[tool:pytest]
testpaths = tests

[pylint]
disable = C0301
output-format = colorized

#[bdist_wheel]
#universal = 1
