[metadata]
name = uone_data_scraping
version = 1.33.7-dev0

author = ETL
author_email = it@heydaynow.com

# One-line project description
description = Create parameters for API calls to 3rd party APIs to gather raw data and then make API calls t get said data.

# ref README, it contains more detail
long_description = file: README.md

# url = https://us-west-2.console.aws.amazon.com/codesuite/codecommit/repositories/uone-data-scraping/browse

[options]
zip_safe = True
include_package_data = True
packages = find:

[tool:pytest]
testpaths = tests

[pylint]
disable = C0301
output-format = colorized

#[bdist_wheel]
#universal = 1
